# personal_portfolio

./: .gitignore  .profile  Procfile  README.md  db_create.py  forms.py  gulpfile.js  index.html  old_reqs.txt  package-lock.json  package.json  portfolio.py  pyproject.toml  requirements-to-freeze.txt  requirements.txt  resume.html  robots.txt  run.py
css/: foundation.css  style.css
migrations/versions/: 07e1e7fd3e06_.py  27a79ad0c418_.py  412d892be13f_remove_unique_constraint_from_video_url_.py  7596e4ae82a2_initial_migration.py  82d0e9daa18c_wishlist_items_table.py  8ae27db58cde_add_title_to_gift.py  aa630e63ed8b_initial_migration.py  b5e44edcb425_.py  cdabbdd159d3_add_image_url_to_gift.py  dd2d0ccc81f2_add_new_models_and_relationships.py  ed8948ebb947_initial_migration.py  fix_list_item_nullable_fields.py
project/: __init__.py  _config.py  commands.py  csp.py  database.py  events.py  extensions.py  models.py  portfolio.db  portfolio.py  tasks.py
project/account/: forms.py  views.py
project/account/templates/: login.html
project/crm/: views.py
project/crm/templates/: crm-home.html
project/data/jsonfiles/: clean-youtube-playlist-data.json  youtube-ids.json  youtube-playlist-data.json
project/data/yamlfiles/: jobs.yml  projects.yml
project/foyer/: email_templates.py  forms.py  views.py
project/foyer/yamlfiles/: projects.yml
project/jobs/: getyoutubedata.py
project/jobwizard/: forms.py  views.py
project/jobwizard/templates/: job.html  job_list.html  jobwizard.html
project/lists/: forms.py  views.py
project/lists/templates/: list_view.html  lists.html
project/oauth/: views.py
project/ranch/: forms.py  views.py
project/ranch/templates/: _ranch_header.html  ranch_add_image.html  ranch_base.html  ranch_home.html  ranch_image.html  ranch_images.html  ranch_seen.html
project/static/css/: main.css
project/static/js/: main.js  media.js  portfolio.js  ranch.js
project/static/less/: base.less  contact.less  footer.less  form.less  header.less  home.less  job.less  jobwizard.less  learningtospeak.less  login.less  main.less  modal.less  resume.less  typography.less  wishlist.less
project/templates/: 404.html  500.html  _button.html  _footer.html  _form.html  _header.html  base.html  contact.html  home.html  learningtospeak.html  media.html  modal.html  resume.html  utilities.html
project/wishlist/: forms.py  views.py
scripts/: setup_database.sh
static/css/: foundation.css  main.css
static/js/: portfolio.js
static/less/: base.less  contact.less  fonts.less  footer.less  home.less  learningtospeak.less  main.less  resume.less
templates/: _footer.html  _header.html  base.html  contact.html  home.html  learningtospeak.html  resume.html
yamlfiles/: projects.yml
(+21 files in other folders)
